2022-05-16         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* gawkext.m4: Clarify help string to say --with-gawk=DIR
	instead of --with-gawk=PATH.
	* test.makefile (CMP): Change from cmp to "diff -qa --strip-trailing-cr"
	to work on MinGW.
	(AWK): Use $(PATH_SEPARATOR) instead of :; try to support MinGW
	by using gensub to fix AWKLIBPATH by removing colons that MinGW
	bash would convert to semi-colons and thereby screw up the path.
	(diffout): Remove pipe to "more", since that may not be available
	on platforms such as MinGW.

2017-12-14         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* common.h: If GAWKEXTLIB_NOT_NEEDED is defined, include <gawkapi.h>
	instead of "gawkextlib.h". This is for pure extensions that do not
	use the gawkextlib library.

2017-12-04         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* gawkext.m4 (AC_PURE_GAWK_EXTENSION): Add new macro for use by
	extensions that do not depend on gawkextlib.

2017-11-20         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* common.h (__UNUSED_V2, API_FINFO_ARG, API_FUNC_MAXMIN, API_FUNC): Add
	new macros to facilitate implementing extension functions that are
	compatible with gawk API versions 1 and 2.

2017-11-19         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* common.h (make_user_input_malloc, make_user_input_no_malloc): Add
	new macros for new gawk API 2.0 AWK_STRNUM feature, and include
	backwards-compatible versions for older API.
	(ezalloc): Add compatibility macro for API versions prior to 2.0.

2017-10-03         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* packaging.makefile (EXTRA_DIST): Comment this out. We will on longer
	include rpm spec files in the tarballs, since changing the spec file
	should not require us to bump the tarball version.

2017-08-20         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* common.h (GAWKEXTLIB_COMMON_INIT): If NLS is not available, eliminate